# dagon

./: .gitignore  .travis.yml  Cargo.toml  Herbie.toml  README.md  index.html  rustfmt.toml  search-index.js
acacia/: index.html  sidebar-items.js
benches/: gravity.rs
byteorder/: index.html  trait.ByteOrder.html  trait.ReadBytesExt.html  trait.WriteBytesExt.html  type.NativeEndian.html
clippy/: fn.plugin_registrar.html  index.html
clippy_lints/: fn.register_plugins.html  index.html  macro.if_let_chain!.html  macro.if_let_chain.html  register_plugins.v.html  sidebar-items.js
dagon/: GravityParticle.t.html  fn.force_between_particles.html  fn.forces_by_direct_summation.html  fn.forces_from_tree.html  fn.make_random_initial_conditions.html  fn.newtonian_gravity_force.html  fn.try_makedir.html  force_between_particles.v.html  forces_by_direct_summation.v.html  forces_from_tree.v.html  index.html  make_random_initial_conditions.v.html  newtonian_gravity_force.v.html  sidebar-items.js  struct.GravityParticle.html  try_makedir.v.html  type.Point.html  type.Vector.html
dagon_run/: index.html
nalgebra/: enum.PartialOrdering.html  fn.abs.html  fn.absolute_rotate.html  fn.angle_between.html  fn.append_rotation.html  fn.append_rotation_wrt_center.html  fn.append_rotation_wrt_point.html  fn.append_transformation.html  fn.append_translation.html  fn.approx_eq.html  fn.approx_eq_eps.html  fn.canonical_basis.html  fn.canonical_basis_element.html  fn.cast.html  fn.center.html  fn.cholesky.html  fn.clamp.html  fn.covariance.html  fn.cross.html  fn.cross_matrix.html  fn.determinant.html  fn.diagonal.html  fn.dimension.html  fn.distance.html  fn.distance_squared.html  fn.dot.html  fn.eigen_qr.html  fn.from_homogeneous.html  fn.hessenberg.html  fn.householder_matrix.html  fn.identity.html  fn.inf.html  fn.inverse.html  fn.inverse_rotate.html  fn.inverse_rotation.html  fn.inverse_transform.html  fn.inverse_transformation.html  fn.inverse_translate.html  fn.is_zero.html  (+140 more)
(+1513 files in other folders)
