[package]
name = "dagon"
version = "0.0.2"
authors = ["André-Patrick Bubel <code@andre-bubel.de>"]
description = "An astrophysical hydrodynamics and n-body experiment"
homepage = "https://github.com/Moredread/dagon"
repository = "https://github.com/Moredread/dagon"
readme = "README.md"
license = "GPL-3.0+"

[[bin]]
name = "dagon-run"

[dependencies]
acacia = { git = "https://github.com/aepsil0n/acacia" }
rand = "0.3"  # limited by acacia
num = "0.1"  # limited by acacia
nalgebra = ">=0.9, <1.0"  # limited by acacia

rmp-serialize = "0.8"
rustc-serialize = "0.3"
rayon = "0.4"
clippy = "0"
herbie-lint = {version = "1.0", optional = true}
log = "*"
env_logger = "*"
ordered-float = "0.2"  # TODO: do we really need this dep?

[features]
default = []

[profile.dev]
opt-level = 3
